About adjustments, media queries.

--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,6 @@
 
 @layer base {
   section {
-    @apply min-h-screen;
   }
 
   h1 {
@@ -42,4 +41,8 @@
     @apply bg-c-gray font-bold !absolute px-2 py-3 rounded-sm w-48 h-32 translate-y-[-121px];
     
   }
+}
+
+section {
+  min-height: max(100vh, 1000px) !important;
 }
