--- a/src/input.css
+++ b/src/input.css
@@ -3,15 +3,16 @@
 @tailwind utilities;
 
 @layer base {
-  section {
-  }
-
   h1 {
     @apply text-6xl leading-snug;
   }
 
   h2 {
     @apply text-5xl;
+  }
+
+  section {
+    @apply pt-[180px] mt-[-180px] min-h-[1200px];
   }
 
   .vertical {
@@ -41,7 +42,7 @@
     @apply bg-c-gray font-bold !absolute px-2 py-3 rounded-sm w-48 h-32 translate-y-[-121px];
   }
 
-  section {
-    @apply pt-[180px] mt-[-180px] min-h-[1200px];
+  .button {
+    @apply uppercase rounded font-bold text-2xl text-center cursor-pointer;
   }
 }
